--- a/Angular/app.css
+++ b/Angular/app.css
@@ -10,7 +10,8 @@
 
 body::after {
   content: "";
-  background: url(img/background.jpg);
+  /* background: url(img/background.jpg); */
+  background: url(img/flower.jpg);
   opacity: 0.85;
   top: 0;
   left: 0;
@@ -26,10 +27,10 @@ body::after {
 margin-top: -3%;
 
 }
-
+/* 
 #myChart {
   background-color: #FFFFFF;
-}
+} */
 
 .selectClass{
     display: block;
